fixed spacing between list items when there are nested lists

--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -339,15 +339,24 @@ $footer-top-border: 2px solid $text-color;
 
 // article body typography tweaks
 
-.g-body .playlist-navigation ul li,
-.g-body .playlist-navigation ol li,
-.g-body .g-main-content ul li,
-.g-body .g-main-content ol li {
-  text-indent: -20px;
+.g-body .playlist-navigation ul,
+.g-body .playlist-navigation ol,
+.g-body .g-main-content ul,
+.g-body .g-main-content ol {
+  margin-bottom: 1rem;
   
-  &:not(:last-child) {
-    margin-bottom: 1rem;
+  li {
+    text-indent: -19px;
+
+    &:not(:last-child) {
+     margin-bottom: 1rem;
+   }
   }
+}
+
+.g-body .g-main-content ul + p,
+.g-body .g-main-content ol + p {
+  margin-top: -1rem; // offset spacing from preceding list
 }
 
 // tweaks for article section nav
